--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,5 +1,44 @@
-<h1>Administration</h1>
-<ul>
-  <li><%= link_to 'Manage Orders', admin_orders_path %></li>
-  <li><%= link_to 'Manage News', admin_news_index_path %></li>
-</ul>
+<% if @current_user.can_view_stats? %>
+  <div class="rounded-square">
+    <h2>Last month's stats:</h2>
+    <table>
+      <tr><td>Orders placed:</td><td class="bold"><%= @orders_last_month.count %></td></tr>
+      <tr><td>Orders in progress:</td><td class="bold"><%= @orders_last_month.count { |order| order.order_status_id.between?(1,3) }  %></td></tr>
+      <tr><td>Orders completed:</td><td class="bold"><%= @orders_last_month.count { |order| order.order_status_id == 4 }  %></td></tr>
+      <tr><td>Orders cancelled:</td><td class="bold"><%= @orders_last_month.count { |order| order.order_status_id == 5 }  %></td></tr>
+      <tr>
+        <td>Total profit:</td>
+        <% monthly_profit = @orders_last_month.select { |order| order.order_status_id == 4 }.inject(0) {|sum, order| sum + (order.amount_from - order.amount_to) } %>
+        <td class="bold"><%= monthly_profit ? number_with_delimiter(monthly_profit, delimiter: ' ') : '0' %> gold</td>
+      </tr>
+    </table>
+  </div>
+  <div class="rounded-square">
+    <h2>This month's stats:</h2>
+    <table>
+      <tr><td>Orders placed:</td><td class="bold"><%= @orders_this_month.count %></td></tr>
+      <tr><td>Orders in progress:</td><td class="bold"><%= @orders_this_month.count { |order| order.order_status_id.between?(1,3) }  %></td></tr>
+      <tr><td>Orders completed:</td><td class="bold"><%= @orders_this_month.count { |order| order.order_status_id == 4 }  %></td></tr>
+      <tr><td>Orders cancelled:</td><td class="bold"><%= @orders_this_month.count { |order| order.order_status_id == 5 }  %></td></tr>
+      <tr>
+        <td>Total profit:</td>
+        <% monthly_profit = @orders_this_month.select { |order| order.order_status_id == 4 }.inject(0) {|sum, order| sum + (order.amount_from - order.amount_to) } %>
+        <td class="bold"><%= monthly_profit ? number_with_delimiter(monthly_profit, delimiter: ' ') : '0' %> gold</td>
+      </tr>
+    </table>
+  </div>
+  <div class="rounded-square">
+    <h2>Overall stats:</h2>
+    <table>
+      <tr><td>Orders placed:</td><td class="bold"><%= @orders.count %></td></tr>
+      <tr><td>Orders in progress:</td><td class="bold"><%= @orders.count { |order| order.order_status_id.between?(1,3) }  %></td></tr>
+      <tr><td>Orders completed:</td><td class="bold"><%= @orders.count { |order| order.order_status_id == 4 }  %></td></tr>
+      <tr><td>Orders cancelled:</td><td class="bold"><%= @orders.count { |order| order.order_status_id == 5 }  %></td></tr>
+      <tr>
+        <td>Total profit:</td>
+        <% monthly_profit = @orders.select { |order| order.order_status_id == 4 }.inject(0) {|sum, order| sum + (order.amount_from - order.amount_to) } %>
+        <td class="bold"><%= monthly_profit ? number_with_delimiter(monthly_profit, delimiter: ' ') : '0' %> gold</td>
+      </tr>
+    </table>
+  </div>
+<% end %>
